New blocks (tiles and footer) and icon font

--- a/static/css/styl/jumbotron.styl
+++ b/static/css/styl/jumbotron.styl
@@ -1,7 +1,9 @@
 .jumbotron
 	padding: 3rem 0
 	text-align: center
+	color: #FFF
 	background: rgba(0, 0, 0, .3)
+	text-shadow: 0 0 .1rem rgba(0, 0, 0, .5)
 	
 	&__name
 		font-size: 3rem
