--- a/static/css/styles.styl
+++ b/static/css/styles.styl
@@ -1,9 +1,16 @@
 @import 'nib'
-@import 'styl/jumbotron'
+@import 'styl/*'
 
 html
+	height: 100%
 	font-size: 25px
 	background: #EEE
+
+body
+	height: 100%
+
+.clearfix
+	clearfix()
 
 @media only screen and (max-width: 800px)
 	html
