--- a/static/css/styl/tiles.styl
+++ b/static/css/styl/tiles.styl
@@ -1,7 +1,7 @@
 .tiles
 	width: 80%
 	margin: 1rem auto
-	background: rgba(255, 200, 200, .3)
+	//background: rgba(255, 200, 200, .3)
 
 .tile
 	float: left
@@ -10,8 +10,10 @@
 	box-sizing: border-box
 	color: #FFF
 	background: rgba(0, 0, 255, .3)
+	font-size: 2rem
 	text-align: center
 	text-decoration: none
+	text-shadow: $shadow
 
 	&:nth-child(odd)
 		margin: 1rem 5% 1rem 0
@@ -19,6 +21,18 @@
 	&:nth-child(even)
 		margin: 1rem 0 1rem 5%
 
+	for $type in (resume about contacts portfolio)
+		&_{$type}
+			background: url($image_path''$type'.png')
+
+			polygon
+				clip-path: url('#clip-'$type)
+
 	&__icon
 		display: block
-		text-align: center
+		width: 5rem
+		height: 5rem
+		margin: 0 auto .5rem auto
+		box-shadow: $shadow
+		background: #FFF
+		border-radius: 50%
