--- a/static/css/styl/jumbotron.styl
+++ b/static/css/styl/jumbotron.styl
@@ -1,14 +1,13 @@
 .jumbotron
-	padding: 3rem 0
+	padding: 1rem 0
 	text-align: center
 	color: #FFF
-	background: rgba(0, 0, 0, .3)
-	text-shadow: 0 0 .1rem rgba(0, 0, 0, .5)
-	
+
 	&__name
-		font-size: 3rem
-	
+		margin: 0
+		padding: 0
+		font: 400 3rem/1.2 'Open Sans'
+
 	&__desc
 		margin: 0
-		font-size: 2rem
-		font-style: italic
+		font: italic 2rem/1.2 'Open Sans Condensed'
