--- a/static/css/styl/flaticon.styl
+++ b/static/css/styl/flaticon.styl
@@ -13,7 +13,7 @@
 	font-family: Flaticon
 	font-size: 20px
 	font-style: normal
-	//margin-left: 20px
+	margin-left: 20px
 }
 .flaticon-
 	&curriculum:before
