--- a/static/css/styl/footer.styl
+++ b/static/css/styl/footer.styl
@@ -1,11 +1,20 @@
 .footer
 	padding: 1rem 10%
-	background: #222
 	color: #FFF
+
+	&__head
+		margin: 0
+		padding: 0
+		font: 1rem/1.4 'Open Sans Condensed'
 
 	&__list
 		padding: 0
+		font-size: .5rem
+		line-height: 1.4
 		column-count: 3
 
 		a
-			color: #FFF
+			color: #DDD
+
+			&:hover
+				color: #FFF
