--- a/static/css/styl/tiles.styl
+++ b/static/css/styl/tiles.styl
@@ -1,25 +1,31 @@
 .tiles
-	width: 80%
-	margin: 1rem auto
-	//background: rgba(255, 200, 200, .3)
+	padding: 1rem 10%
+	background: #FFF
 
 .tile
 	float: left
 	width: 45%
 	padding: 1rem
-	box-sizing: border-box
 	color: #FFF
-	background: rgba(0, 0, 255, .3)
-	font-size: 2rem
+	background: #222
 	text-align: center
 	text-decoration: none
 	text-shadow: $shadow
+	font: 2rem/1.0 'Open Sans Condensed'
+	box-sizing: border-box
+	box-shadow: $shadow
 
 	&:nth-child(odd)
-		margin: 1rem 5% 1rem 0
+		margin: 1.5rem 5% 1.5rem 0
 
 	&:nth-child(even)
-		margin: 1rem 0 1rem 5%
+		margin: 1.5rem 0 1.5rem 5%
+
+	&:hover
+		box-shadow: $shadow_hover
+
+		.tile__icon
+			box-shadow: $shadow_hover
 
 	for $type in (resume about contacts portfolio)
 		&_{$type}
@@ -32,7 +38,7 @@
 		display: block
 		width: 5rem
 		height: 5rem
-		margin: 0 auto .5rem auto
+		margin: 0 auto .3rem auto
 		box-shadow: $shadow
 		background: #FFF
 		border-radius: 50%
