--- a/static/css/styles.styl
+++ b/static/css/styles.styl
@@ -1,28 +1,39 @@
 // Variables
-$font_path='../static/fonts/'
+$font_path = '../static/fonts/'
 $image_path = '../static/i/'
-$shadow = 0 0 2px rgba(0, 0, 0, .5)
+$shadow = 0 0 .1rem #000
+$shadow_hover = 0 0 .5rem #000
 
+// Fonts
+@import url('http://fonts.googleapis.com/css?family=Open+Sans')
+@import url('http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic')
+
+// Imports
 @import 'nib'
 @import 'styl/*'
 
+// Common staff
 html
-	height: 100%
+	min-height: 100%
 	font-size: 25px
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
-	background: #FFF
+	background: #222 url($image_path'bg.png') 0 0
 
 body
-	height: 100%
+	min-width: 300px
 
 .clearfix
 	clearfix()
 
-.implicit
+.is-implicit
 	position: absolute
 	width: 0
 	height: 0
 
 @media only screen and (max-width: 800px)
+	html
+		font-size: 15px
+
+@media only screen and (max-width: 450px)
 	html
 		font-size: 10px
