--- a/static/css/styl/jumbotron.styl
+++ b/static/css/styl/jumbotron.styl
@@ -6,8 +6,12 @@
 	&__name
 		margin: 0
 		padding: 0
-		font: 400 3rem/1.2 'Open Sans'
+		font: 400 3rem/1.2 'PT Sans'
+
+	a, a:hover
+		color: #FFF
+		text-decoration: none
 
 	&__desc
 		margin: 0
-		font: italic 2rem/1.2 'Open Sans Condensed'
+		font: 1.5rem/1.2 'Open Sans Condensed'
