--- a/static/css/styl/tiles.styl
+++ b/static/css/styl/tiles.styl
@@ -1,6 +1,35 @@
+$pages = (resume about contacts portfolio)
+
 .tiles
 	padding: 1rem 10%
 	background: #FFF
+
+	&_atop
+		padding: 0
+
+		.tile
+			float: none
+			display: none
+			width: 100%
+			padding: .5rem 10%
+			margin: 0 !important
+			text-align: left
+			vertical-align: middle
+			cursor: default
+
+			&:hover .tile__icon
+				transform: none
+
+			&__icon
+				display: inline-block
+				width: 3rem
+				height: 3rem
+				margin: 0 .5rem 0 0
+				vertical-align: middle
+
+		for $type in $pages
+			&_{$type} .tile_{$type}
+				display: block
 
 .tile
 	float: left
@@ -21,13 +50,10 @@
 	&:nth-child(even)
 		margin: 1.5rem 0 1.5rem 5%
 
-	&:hover
-		box-shadow: $shadow_hover
+	&:hover &__icon
+		transform: scale(1.15)
 
-		.tile__icon
-			box-shadow: $shadow_hover
-
-	for $type in (resume about contacts portfolio)
+	for $type in $pages
 		&_{$type}
 			background: url($image_path''$type'.png')
 
@@ -35,6 +61,7 @@
 				clip-path: url('#clip-'$type)
 
 	&__icon
+		position: relative // fixed transition for Safaru
 		display: block
 		width: 5rem
 		height: 5rem
@@ -42,3 +69,4 @@
 		box-shadow: $shadow
 		background: #FFF
 		border-radius: 50%
+		transition: all .2s ease-in-out
