Completed page 'about me'

--- a/static/css/styl/content.styl
+++ b/static/css/styl/content.styl
@@ -1,4 +1,15 @@
 .content
-	padding: 1rem 10%
+	padding: 1.5rem 10%
 	font-size: .8rem
-	background: #FFF
+	
+	&_about
+		background: #fffddd
+
+	h1, h2, h3
+		color: #666
+
+	a
+		color: #666
+
+		&:hover
+			color: #000
