--- a/static/css/styles.styl
+++ b/static/css/styles.styl
@@ -2,6 +2,11 @@
 $font_path = '../static/fonts/'
 $image_path = '../static/i/'
 $shadow = 0 0 .1rem #000
+$headers = { // [0] - font-size, [1] — margin-top, [2] — margin-bottom
+	h1: (2rem 1rem .7rem)
+	h2: (1.5rem .9rem .6rem)
+	h3: (1.2rem .7rem .5rem)
+}
 
 // Fonts
 @import url('http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
@@ -17,13 +22,24 @@ html
 	min-height: 100%
 	font-size: 25px
 	font-family: 'PT Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
-	line-height: 1.2
+	line-height: 1.8
 	font-weight: 400
 	color: #222
-	background: #222 embedurl('../i/bg.png') // Image inlining for page background
+	background: #222 embedurl('../i/dark_geometric.png') // Image inlining for page background
 
 body
 	min-width: 300px
+
+for $hi in keys($headers)
+	{$hi}
+		padding: 0
+		margin: $headers[$hi][1] 0 $headers[$hi][2]
+		font-family: 'Open Sans Condensed'
+		font-size: $headers[$hi][0]
+
+p
+	padding: 0
+	margin: 0 0 .5rem
 
 .clearfix
 	clearfix()
