--- a/static/css/styl/flaticon.styl
+++ b/static/css/styl/flaticon.styl
@@ -1,26 +1,38 @@
 @font-face
 	font-family: 'Flaticon'
 	src: url($font_path'flaticon.eot')
-	src: url($font_path'flaticon.eot#iefix') format('mbedded-opentype'),
-	url($font_path'flaticon.woff') format('woff'),
-	url($font_path'flaticon.ttf') format('truetype'),
-	url($font_path'flaticon.svg') format('svg')
+	src: url($font_path'flaticon.eot#iefix') format('embedded-opentype'),
+		url($font_path'flaticon.woff') format('woff'),
+		url($font_path'flaticon.ttf') format('truetype'),
+		url($font_path'flaticon.svg') format('svg')
 	font-weight: normal
 	font-style: normal
 
 [class^='flaticon-']:before, [class*=' flaticon-']:before,
-[class^='flaticon-']:after, [class*=' flaticon-']:after {   
+[class^='flaticon-']:after, [class*=' flaticon-']:after
 	font-family: Flaticon
-	font-size: 20px
 	font-style: normal
-	margin-left: 20px
-}
+
 .flaticon-
-	&curriculum:before
+	&check59:before 
 		content: '\e000'
-	&male66:before
+	&email6:before 
 		content: '\e001'
-	&notebook35:before
+	&facebook29:before
 		content: '\e002'
-	&portfolio14:before
+	&github13:before 
 		content: '\e003'
+	&hotel75:before 
+		content: '\e004'
+	&phone72:before 
+		content: '\e005'
+	&photos12:before 
+		content: '\e006'
+	&social19:before 
+		content: '\e007'
+	&social5:before 
+		content: '\e008'
+	&social6:before 
+		content: '\e009'
+	&youtube17:before 
+		content: '\e00a'
