--- a/static/css/styl/tiles.styl
+++ b/static/css/styl/tiles.styl
@@ -14,7 +14,6 @@ $pages = (resume about contacts portfolio)
 			padding: .5rem 10%
 			margin: 0 !important
 			text-align: left
-			vertical-align: middle
 			cursor: default
 
 			&:hover .tile__icon
@@ -34,13 +33,14 @@ $pages = (resume about contacts portfolio)
 .tile
 	float: left
 	width: 45%
-	padding: 1rem
+	padding: 1rem 0
 	color: #FFF
 	background: #222
 	text-align: center
 	text-decoration: none
 	text-shadow: $shadow
 	font: 2rem/1.0 'Open Sans Condensed'
+	white-space: nowrap
 	box-sizing: border-box
 	box-shadow: $shadow
 
