--- a/static/css/styl/content.styl
+++ b/static/css/styl/content.styl
@@ -1,9 +1,13 @@
 .content
 	padding: 1.5rem 10%
 	font-size: .8rem
+	background: #FFF
 	
 	&_about
-		background: #fffddd
+		background: #FFFDDD
+
+	&_contacts
+		background: #FFEEEE
 
 	h1, h2, h3
 		color: #666
