--- a/static/css/styles.styl
+++ b/static/css/styles.styl
@@ -10,8 +10,7 @@ $headers = { // [0] - font-size, [1] — margin-top, [2] — margin-bottom
 
 // Fonts
 @import url('http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
-@import url('http://fonts.googleapis.com/css?family=PT+Sans&subset=latin,cyrillic-ext');
-
+@import url('http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic-ext');
 
 // Imports
 @import 'nib'
