--- a/static/css/styl/tiles.styl
+++ b/static/css/styl/tiles.styl
@@ -50,8 +50,11 @@ $pages = (resume about contacts portfolio)
 	&:nth-child(even)
 		margin: 1.5rem 0 1.5rem 5%
 
-	&:hover &__icon
-		transform: scale(1.15)
+	&:hover
+		color: #FFF
+
+		.tile__icon
+			transform: scale(1.15)
 
 	for $type in $pages
 		&_{$type}
