--- a/static/css/styl/contacts.styl
+++ b/static/css/styl/contacts.styl
@@ -1,14 +1,15 @@
 .contacts
 	padding: 0
 	list-style: none
+	text-align: center
 
 .contact
 	vertical-align: middle
 
 	&_delim
 		width: 10rem
-		margin: .5rem 0
-		border-top: .05rem solid #999
+		margin: .5rem auto
+		border-top: $gray_line
 
 	&__icon
 		display: inline-block
