--- a/static/css/styl/flaticon.styl
+++ b/static/css/styl/flaticon.styl
@@ -14,25 +14,62 @@
 	font-style: normal
 
 .flaticon-
-	&check59:before 
+	&address14:before
 		content: '\e000'
-	&email6:before 
+
+	&check59:before
 		content: '\e001'
-	&facebook29:before
+
+	&code16:before
 		content: '\e002'
-	&github13:before 
+
+	&curriculum:before
 		content: '\e003'
-	&hotel75:before 
+
+	&email6:before
 		content: '\e004'
-	&phone72:before 
+
+	&facebook29:before
 		content: '\e005'
-	&photos12:before 
+
+	&github13:before
 		content: '\e006'
-	&social19:before 
+
+	&hiking:before
 		content: '\e007'
-	&social5:before 
+
+	&hotel75:before
 		content: '\e008'
-	&social6:before 
+
+	&html-tag:before
 		content: '\e009'
-	&youtube17:before 
+
+	&male210:before
 		content: '\e00a'
+
+	&man143:before
+		content: '\e00b'
+
+	&nerd8:before
+		content: '\e00c'
+
+	&phone72:before
+		content: '\e00d'
+
+	&photos12:before
+		content: '\e00e'
+
+	&portfolio14:before
+		content: '\e00f'
+
+	&social19:before
+		content: '\e010'
+
+	&social5:before
+		content: '\e011'
+
+	&social6:before
+		content: '\e012'
+
+	&youtube17:before
+		content: '\e013'
