--- a/static/css/styl/jumbotron.styl
+++ b/static/css/styl/jumbotron.styl
@@ -6,7 +6,7 @@
 	&__name
 		margin: 0
 		padding: 0
-		font: 400 3rem/1.2 'PT Sans'
+		font: 400 3rem/1.2 $font_default
 
 	a, a:hover
 		color: #FFF
@@ -14,4 +14,4 @@
 
 	&__desc
 		margin: 0
-		font: 1.5rem/1.2 'Open Sans Condensed'
+		font: 1.5rem/1.2 'Open Sans Condensed', $font_default
