--- a/static/css/styl/project.styl
+++ b/static/css/styl/project.styl
@@ -1,3 +1,6 @@
+.projects
+	padding: 1.5rem 10% 0
+
 .project
 	position: relative
 	float: left
@@ -37,7 +40,7 @@
 		font-size: .7rem
 		box-sizing: border-box
 		transition: all .2s ease-in-out
-		
+
 		&__caption
 			display: block
 			padding: 1rem 0
