--- a/static/css/styles.styl
+++ b/static/css/styles.styl
@@ -1,16 +1,34 @@
 // Variables
 $font_path = '../static/fonts/'
+$font_default = 'PT Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
 $image_path = '../static/i/'
+
 $shadow = 0 0 .1rem #000
+$gray_line = 1px solid #999
+
 $headers = { // [0] - font-size, [1] — margin-top, [2] — margin-bottom
 	h1: (2rem 1rem .7rem)
 	h2: (1.5rem .9rem .6rem)
 	h3: (1.2rem .7rem .5rem)
 }
+$slides = {
+	about: (#FFFDDD)
+	contacts: (#FFEEEE)
+	resume: (#EBFFFD)
+	portfolio: (#faeeff)
+}
 
 // Fonts
-@import url('http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
-@import url('http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic-ext');
+@font-face
+	font-family: 'Open Sans Condensed'
+	src: url($font_path'opensans-condlight-webfont.eot')
+	src: url($font_path'opensans-condlight-webfont.eot?#iefix') format('embedded-opentype'),
+		url($font_path'opensans-condlight-webfont.woff2') format('woff2'),
+		url($font_path'opensans-condlight-webfont.woff') format('woff'),
+		url($font_path'opensans-condlight-webfont.ttf') format('truetype'),
+		url($font_path'opensans-condlight-webfont.svg#open_sanscondensed_light') format('svg')
+	font-weight: normal
+	font-style: normal
 
 // Imports
 @import 'nib'
@@ -21,11 +39,11 @@ $headers = { // [0] - font-size, [1] — margin-top, [2] — margin-bottom
 html
 	min-height: 100%
 	font-size: 25px
-	font-family: 'PT Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
+	font-family: $font_default
 	line-height: 1.8
 	font-weight: 400
-	color: #222
-	background: #222 embedurl('../i/dark_geometric.png') // Image inlining for page background
+	color: #333
+	background: #333
 
 body
 	min-width: 300px
@@ -34,7 +52,7 @@ for $hi in keys($headers)
 	{$hi}
 		padding: 0
 		margin: $headers[$hi][1] 0 $headers[$hi][2]
-		font-family: 'Open Sans Condensed'
+		font-family: 'Open Sans Condensed', $font_default
 		font-size: $headers[$hi][0]
 
 p
@@ -46,6 +64,9 @@ a
 
 	&:hover
 		color: #cc6666
+
+.dark
+	background: #333 embedurl('../i/dark_geometric.png') // Image inlining for page background
 
 .clearfix
 	clearfix()
