External PT Sans

--- a/static/css/styl/slide.styl
+++ b/static/css/styl/slide.styl
@@ -6,6 +6,12 @@
 	&__text
 		padding: 0 10%
 
-	h2, h3
+		&_center
+			text-align: center
+		
+		&_free
+			padding-top: 1rem
+
+	h2, h3, h4
 		font-weight: normal
 		text-align: center
