--- a/static/css/styl/footer.styl
+++ b/static/css/styl/footer.styl
@@ -5,7 +5,7 @@
 	&__head
 		margin: 0
 		padding: 0
-		font: 1rem/1.4 'Open Sans Condensed'
+		font: 1rem/1.4 $font_condensed
 
 	&__list
 		padding: 0
