--- a/static/css/styl/project.styl
+++ b/static/css/styl/project.styl
@@ -15,7 +15,7 @@
 		opacity: 1
 
 	&__title
-		font-family: 'Open Sans Condensed'
+		font-family: $font_condensed
 		font-size: 1.5rem
 		line-height: 1.5rem
 
@@ -45,7 +45,7 @@
 			display: block
 			padding: 1rem 0
 			color: #FFF
-			font: 1rem 'Open Sans Condensed'
+			font: 1rem $font_condensed
 
 @media only screen and (max-width: 800px)
 	.project
