--- a/static/css/styles.styl
+++ b/static/css/styles.styl
@@ -1,15 +1,17 @@
 // Variables
 $font_path = '../static/fonts/'
 $font_default = 'PT Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
+$font_condensed = 'Open Sans Condensed', $font_default
+
 $image_path = '../static/i/'
 
 $shadow = 0 0 .1rem #000
 $gray_line = 1px solid #999
 
 $headers = { // [0] - font-size, [1] — margin-top, [2] — margin-bottom
-	h1: (2rem 1rem .7rem)
-	h2: (1.5rem .9rem .6rem)
-	h3: (1.2rem .7rem .5rem)
+	h2: (2rem 1rem .7rem)
+	h3: (1.5rem .9rem .6rem)
+	h4: (1.2rem .7rem .5rem)
 }
 $slides = {
 	about: (#FFFDDD)
@@ -27,6 +29,17 @@ $slides = {
 		url($font_path'opensans-condlight-webfont.woff') format('woff'),
 		url($font_path'opensans-condlight-webfont.ttf') format('truetype'),
 		url($font_path'opensans-condlight-webfont.svg#open_sanscondensed_light') format('svg')
+	font-weight: normal
+	font-style: normal
+
+@font-face
+	font-family: 'PT Sans'
+	src: url($font_path'pt_sans-webfont.eot')
+	src: url($font_path'pt_sans-webfont.eot?#iefix') format('embedded-opentype'),
+		url($font_path'pt_sans-webfont.woff2') format('woff2'),
+		url($font_path'pt_sans-webfont.woff') format('woff'),
+		url($font_path'pt_sans-webfont.ttf') format('truetype'),
+		url($font_path'pt_sans-webfont.svg#pt_sansregular') format('svg')
 	font-weight: normal
 	font-style: normal
 
@@ -52,7 +65,7 @@ for $hi in keys($headers)
 	{$hi}
 		padding: 0
 		margin: $headers[$hi][1] 0 $headers[$hi][2]
-		font-family: 'Open Sans Condensed', $font_default
+		font-family: $font_condensed
 		font-size: $headers[$hi][0]
 
 p
