Footer with dropdown list of technologies

--- a/static/css/styl/flaticon.styl
+++ b/static/css/styl/flaticon.styl
@@ -15,61 +15,64 @@
 
 .flaticon-
 	&address14:before
-		content: '\e000'
+		content '\e000'
 
 	&check59:before
-		content: '\e001'
+		content '\e001'
 
 	&code16:before
-		content: '\e002'
+		content '\e002'
 
 	&curriculum:before
-		content: '\e003'
+		content '\e003'
 
 	&email6:before
-		content: '\e004'
+		content '\e004'
 
 	&facebook29:before
-		content: '\e005'
+		content '\e005'
 
 	&github13:before
-		content: '\e006'
+		content '\e006'
 
 	&hiking:before
-		content: '\e007'
+		content '\e007'
 
 	&hotel75:before
-		content: '\e008'
+		content '\e008'
 
 	&html-tag:before
-		content: '\e009'
+		content '\e009'
+
+	&list23:before
+		content '\e00a'
 
 	&male210:before
-		content: '\e00a'
+		content '\e00b'
 
 	&man143:before
-		content: '\e00b'
+		content '\e00c'
 
 	&nerd8:before
-		content: '\e00c'
+		content '\e00d'
 
 	&phone72:before
-		content: '\e00d'
+		content '\e00e'
 
 	&photos12:before
-		content: '\e00e'
+		content '\e00f'
 
 	&portfolio14:before
-		content: '\e00f'
+		content '\e010'
 
 	&social19:before
-		content: '\e010'
+		content '\e011'
 
 	&social5:before
-		content: '\e011'
+		content '\e012'
 
 	&social6:before
-		content: '\e012'
+		content '\e013'
 
 	&youtube17:before
-		content: '\e013'
+		content '\e014'
