--- a/static/css/styl/footer.styl
+++ b/static/css/styl/footer.styl
@@ -7,12 +7,28 @@
 		padding: 0
 		font: 1rem/1.4 $font_condensed
 
+	&__copyright
+		float: right
+		font: 1rem/1.4 $font_condensed
+
+	&__icon
+		margin: 0 0 0 .3rem
+		cursor: pointer
+
 	&__list
+		width: 100%
 		padding: 0
 		font-size: .6rem
 		line-height: 1.4
 		list-style: none
 		column-count: 3
+		transition: all .3s ease-in-out
+
+		&.is-hidden
+			overflow: hidden
+			display: block
+			height: 0
+			margin: 0
 
 		a
 			color: #DDD
