--- a/static/css/styl/title.styl
+++ b/static/css/styl/title.styl
@@ -40,6 +40,7 @@
 		font-size: 3rem
 		line-height: 5rem
 		text-shadow: $shadow
+		text-decoration: none
 		box-shadow: $shadow
 
 @media only screen and (max-width: 600px)
