Improvements from Anton

--- a/static/css/styl/contacts.styl
+++ b/static/css/styl/contacts.styl
@@ -1,14 +1,13 @@
 .contacts
 	padding: 0
-	list-style: none !important
-	text-align: center
+	list-style: none
 
 .contact
 	vertical-align: middle
 
 	&_delim
 		width: 10rem
-		margin: .5rem auto
+		margin: .5rem 0
 		border-top: $gray_line
 
 	&__icon
