--- a/static/css/styl/footer.styl
+++ b/static/css/styl/footer.styl
@@ -1,6 +1,9 @@
 .footer
-	padding: 1rem 10%
+	padding: 1rem $side_padding
 	color: #FFF
+
+	@media screen and (min-width: $wide_screen)
+		padding: 1rem $wide_side_padding
 
 	&__head
 		margin: 0
