--- a/static/css/styl/project.styl
+++ b/static/css/styl/project.styl
@@ -44,7 +44,7 @@
 			color: #FFF
 			font: 1rem $font_condensed
 
-@media only screen and (max-width: 800px)
+@media only screen and (max-width: $medium_screen)
 	.project
 		width: 45%
 		margin: 0 5% 0 0
