PT Serif as default font

--- a/static/css/styl/slide.styl
+++ b/static/css/styl/slide.styl
@@ -4,10 +4,10 @@
 	background: #FFF
 
 	&__text
-		padding: 0 $side_padding
+		padding: .5rem $side_padding
 
 		@media screen and (min-width: $wide_screen)
-			padding: 0 $wide_side_padding
+			padding: .5rem $wide_side_padding
 
 		&_free
 			padding-top: 2rem
