--- a/static/css/styl/title.styl
+++ b/static/css/styl/title.styl
@@ -11,9 +11,10 @@
 
 	&__head
 		margin: 0
-		font: 2.5rem $font_condensed
+		font: 2.2rem $font_condensed
 		line-height: 3.5rem
 		box-shadow: $shadow
+		color: #555
 
 	&__wrapper
 		position: relative
