--- a/static/css/styl/fonts.styl
+++ b/static/css/styl/fonts.styl
@@ -9,13 +9,24 @@
 	font-weight: normal
 	font-style: normal
 
+// @font-face
+// 	font-family: 'PT Sans'
+// 	src: url($font_path'pt_sans-webfont.eot')
+// 	src: url($font_path'pt_sans-webfont.eot?#iefix') format('embedded-opentype'),
+// 		url($font_path'pt_sans-webfont.woff2') format('woff2'),
+// 		url($font_path'pt_sans-webfont.woff') format('woff'),
+// 		url($font_path'pt_sans-webfont.ttf') format('truetype'),
+// 		url($font_path'pt_sans-webfont.svg#pt_sansregular') format('svg')
+// 	font-weight: normal
+// 	font-style: normal
+
 @font-face
-	font-family: 'PT Sans'
-	src: url($font_path'pt_sans-webfont.eot')
-	src: url($font_path'pt_sans-webfont.eot?#iefix') format('embedded-opentype'),
-		url($font_path'pt_sans-webfont.woff2') format('woff2'),
-		url($font_path'pt_sans-webfont.woff') format('woff'),
-		url($font_path'pt_sans-webfont.ttf') format('truetype'),
-		url($font_path'pt_sans-webfont.svg#pt_sansregular') format('svg')
+	font-family: 'PT Serif'
+	src: url($font_path'pt_serif-webfont.eot')
+	src: url($font_path'pt_serif-webfont.eot?#iefix') format('embedded-opentype'),
+		 url($font_path'pt_serif-webfont.woff2') format('woff2'),
+		 url($font_path'pt_serif-webfont.woff') format('woff'),
+		 url($font_path'pt_serif-webfont.ttf') format('truetype'),
+		 url($font_path'pt_serif-webfont.svg#pt_serifregular') format('svg')
 	font-weight: normal
 	font-style: normal
