--- a/static/css/styles.styl
+++ b/static/css/styles.styl
@@ -15,18 +15,15 @@ $shadow = 0 0 .1rem #000
 $gray_line = 1px solid #999
 
 $headers = { // [0] - font-size, [1] — margin-top, [2] — margin-bottom
-	// h2: (2rem 1rem .7rem)
-	// h3: (1.5rem .9rem .6rem)
-	// h4: (1.2rem .7rem .5rem)
 	h2: (2rem 1rem .7rem)
-	h3: (1.5rem 1rem .6rem)
-	h4: (1.2rem .7rem .3rem)
+	h3: (1.5rem 1.2rem .8rem)
+	h4: (1.2rem .8rem .5rem)
 }
 $slides = {
-	about: (#FFFDDD)
-	contacts: (#FFEEEE)
-	resume: (#EBFFFD)
-	portfolio: (#faeeff)
+	about: (#FFFDDD #d7a42d)
+	contacts: (#FFEEEE #d04568)
+	resume: (#EBFFFD #309287)
+	portfolio: (#faeeff #7f30b8)
 }
 
 // Imports
