--- a/static/css/styl/jumbotron.styl
+++ b/static/css/styl/jumbotron.styl
@@ -6,7 +6,12 @@
 	&__name
 		margin: 0
 		padding: 0
-		font: 400 3rem/1.1 $font_default
+		font: 3rem/1.1 $font_default
+
+		a
+		a:hover
+			color: #FFF
+			text-decoration: none
 
 	&__desc
 		margin: 0
