Linear gradient instead of box-shadow

--- a/static/css/styl/title.styl
+++ b/static/css/styl/title.styl
@@ -7,7 +7,8 @@
 				background: url($image_path''$slide'.png')
 		&_{$slide}
 			.title__head
-				background: $slides[$slide][0]
+				// background: $slides[$slide][0]
+				background: linear-gradient(top, $slides[$slide][0], #FFF)
 
 				&:before
 					display: block
@@ -20,7 +21,7 @@
 		margin: 0
 		font: 2.2rem $font_condensed
 		line-height: 3.5rem
-		box-shadow: $shadow
+		//box-shadow: $shadow
 		color: #555
 
 	&__wrapper
