--- a/static/css/styl/contacts.styl
+++ b/static/css/styl/contacts.styl
@@ -10,6 +10,9 @@
 		margin: .5rem 0
 		border-top: $gray_line
 
+		@media print
+			display: none
+
 	&__icon
 		display: inline-block
 		margin: 0 .4rem 0 0
