--- a/static/css/styl/footer.styl
+++ b/static/css/styl/footer.styl
@@ -5,6 +5,9 @@
 	@media screen and (min-width: $wide_screen)
 		padding: 1rem $wide_side_padding
 
+	@media print
+		display: none
+
 	&__head
 		margin: 0
 		padding: 0
