--- a/src/static/css/styles.styl
+++ b/src/static/css/styles.styl
@@ -1,9 +1,9 @@
 // Variables
-$font_path = '../static/fonts/'
+$font_path = '/fonts/'
 $font_default = 'PT Serif', Georgia, 'Times New Roman', serif
 $font_condensed = 'Open Sans Condensed', 'Helvetica Neue', Helvetica, Arial, sans-serif
 
-$image_path = '../static/i/'
+$image_path = '/i/'
 $pattern_path = $image_path'patterns/'
 
 $wide_screen = 1500px
