3waytalk in portfolio

--- a/src/static/css/styl/project.styl
+++ b/src/static/css/styl/project.styl
@@ -1,9 +1,13 @@
+.projects
+	padding: 2rem $side_padding 0
+	text-align: center
+
 .project
+	display: inline-block
 	position: relative
-	float: left
 	width: 30%
-	margin: 0 3% 0 0
-	padding: 0 0 1rem 0
+	margin: 0 1.5% 1rem
+	padding: 0 0 .5rem 0
 	text-align: center
 	vertical-align: top
 
@@ -47,4 +51,4 @@
 @media only screen and (max-width: $medium_screen)
 	.project
 		width: 45%
-		margin: 0 5% 0 0
+		margin: 0 2.5%
