Fixes IE9 font shorthand

--- a/src/static/css/styl/footer.styl
+++ b/src/static/css/styl/footer.styl
@@ -11,11 +11,11 @@
 	&__head
 		margin: 0
 		padding: 0
-		font: 1rem/1.4 $font_condensed
+		font-rem(1rem)
 
 	&__copyright
 		float: right
-		font: 1rem/1.4 $font_condensed
+		font-rem(1rem)
 
 	&__icon
 		margin: 0 0 0 .3rem
@@ -37,7 +37,7 @@
 			margin: 0
 
 		a
-			color: #DDD
+			color: #AAA
 
 			&:hover
 				color: #FFF
