--- a/src/static/css/styl/jumbotron.styl
+++ b/src/static/css/styl/jumbotron.styl
@@ -6,7 +6,7 @@
 	&__name
 		margin: 0
 		padding: 0
-		font: 3rem/1.1 $font_default
+		font-rem(3rem, 1.1, $font_default)
 
 		a
 		a:hover
@@ -15,4 +15,4 @@
 
 	&__desc
 		margin: 0
-		font: 1.5rem/1.2 $font_condensed
+		font-rem(1.5rem, 1.2, $font_condensed)
