--- a/src/static/css/styl/title.styl
+++ b/src/static/css/styl/title.styl
@@ -60,7 +60,7 @@
 		height: 5rem
 		margin: .5rem 0 0
 		color: #FFF
-		background: #333
+		background: $base_dark
 		border-radius: 50%
 		font-size: 3rem
 		line-height: 5rem
