--- a/src/static/css/styl/mainmenu.styl
+++ b/src/static/css/styl/mainmenu.styl
@@ -16,7 +16,7 @@
 		margin: 0
 		box-shadow: $shadow
 		background: $base_dark
-		background: rgba(0, 0, 0, .85)
+		background: $base_dark_alpha
 		transition: top .2s ease-in-out
 
 	&__item
