--- a/src/static/css/styles.styl
+++ b/src/static/css/styles.styl
@@ -15,6 +15,7 @@ $wide_side_padding = 15%
 $shadow = 0 0 .1rem #000
 $gray_line = 1px solid #999
 $base_dark = #333
+$base_dark_alpha = rgba(0, 0, 0, .85)
 
 $headers = { // [0] - font-size, [1] — margin-top, [2] — margin-bottom
 	h2: (2rem 1rem .7rem)
