Improves images deployment #2

--- a/src/static/css/styles.styl
+++ b/src/static/css/styles.styl
@@ -4,7 +4,7 @@ $font_default = 'PT Serif', Georgia, 'Times New Roman', serif
 $font_condensed = 'Open Sans Condensed', 'Helvetica Neue', Helvetica, Arial, sans-serif
 
 $image_path = '/i/'
-$pattern_path = $image_path'patterns/'
+$pattern_path = '/build/i/patterns/'
 
 $wide_screen = 1500px
 $medium_screen = 800px
