--- a/src/static/css/styles.styl
+++ b/src/static/css/styles.styl
@@ -23,10 +23,10 @@ $headers = { // [0] - font-size, [1] — margin-top, [2] — margin-bottom
 	h4: (1.2rem .8rem .5rem)
 }
 $slides = {
-	about: (#FFFDDD #d7a42d)
-	contacts: (#FFEEEE #d04568)
-	resume: (#EBFFFD #309287)
-	portfolio: (#faeeff #7f30b8)
+	about: #d7a42d
+	contacts: #d04568
+	resume: #309287
+	portfolio: #7f30b8
 }
 
 // Mixins
