Fixes highlight for menu

--- a/src/static/css/styl/mainmenu.styl
+++ b/src/static/css/styl/mainmenu.styl
@@ -39,4 +39,4 @@
 		for $slide in keys($slides)
 			&_{$slide}:hover:after
 			&_{$slide}.is-active:after
-				background: $slides[$slide][1]
+				background: $slides[$slide]
