--- a/src/static/css/styles.styl
+++ b/src/static/css/styles.styl
@@ -55,6 +55,8 @@ html
 
 body
 	min-width: 300px
+	-webkit-font-smoothing: subpixel-antialiased !important
+	backface-visibility: hidden
 
 for $hi in keys($headers)
 	{$hi}
