Updates docpad and adds LinkedIn contact

--- a/src/static/css/styl/flaticon.styl
+++ b/src/static/css/styl/flaticon.styl
@@ -15,64 +15,73 @@
 
 .flaticon-
 	&address14:before
-		content '\e000'
+		content: '\e000'
 
 	&check59:before
-		content '\e001'
+		content: '\e001'
 
 	&code16:before
-		content '\e002'
+		content: '\e002'
 
 	&curriculum:before
-		content '\e003'
+		content: '\e003'
 
 	&email6:before
-		content '\e004'
+		content: '\e004'
 
 	&facebook29:before
-		content '\e005'
+		content: '\e005'
 
 	&github13:before
-		content '\e006'
-
-	&hiking:before
-		content '\e007'
-
-	&hotel75:before
-		content '\e008'
-
-	&html-tag:before
-		content '\e009'
-
-	&list23:before
-		content '\e00a'
-
-	&male210:before
-		content '\e00b'
-
-	&man143:before
-		content '\e00c'
-
-	&nerd8:before
-		content '\e00d'
-
-	&phone72:before
-		content '\e00e'
-
-	&photos12:before
-		content '\e00f'
-
-	&portfolio14:before
-		content '\e010'
-
-	&social19:before
-		content '\e011'
+		content: '\e006'
 
 	&social5:before
-		content '\e012'
+		content: '\e007'
+
+	&hiking:before
+		content: '\e008'
+
+	&home153:before
+		content: '\e009'
+
+	&hotel75:before
+		content: '\e00a'
+
+	&linkedin12:before
+		content: '\e00b'
+
+	&male210:before
+		content: '\e00c'
+
+	&man143:before
+		content: '\e00d'
+
+	&nerd8:before
+		content: '\e00e'
+
+	&phone72:before
+		content: '\e00f'
+
+	&photos12:before
+		content: '\e010'
+
+	&portfolio14:before
+		content: '\e011'
+
+	&list23:before
+		content: '\e012'
+
+	&supermarket13:before
+		content: '\e013'
+
+	&social19:before
+		content: '\e014'
 
 	&social6:before
-		content '\e013'
+		content: '\e015'
+
+	&html-tag:before
+		content: '\e016'
 
 	&youtube17:before
-		content '\e014'
+		content: '\e017'
