--- a/conf/burtsev.me.tmpl
+++ b/conf/burtsev.me.tmpl
@@ -1,12 +1,12 @@
 server {
 	listen 80;
-	server_name burtsev.me www.burtsev.me;
+	server_name local.burtsev.me www.local.burtsev.me;
 
 	gzip on;
 	charset utf-8;
-	access_log /home/sites/burtsev.me/logs/access.nginx.log main;
-	error_log /home/sites/burtsev.me/logs/error.nginx.log;
-	root /home/sites/burtsev.me/www/out;
+	access_log /path/to/project/logs/access.nginx.log main;
+	error_log /path/to/project/logs/error.nginx.log;
+	root /path/to/project/www;
 
 	location ~ /(about|portfolio|resume|contacts) {
 		try_files $uri /index.html;
