--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,53 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #333;
+	background: #f5f5f5;
+	font-family: 'PT Sans', sans-serif;
+	font-size: 14px;
+}
+
+.card {
+	width: 336px;
+	height: 192px;
+	padding: 1.5rem 2rem;
+	background: #ffffff;
+	box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.25);
+	box-sizing: border-box;
+}
+
+.name {
+	font: 2rem/1 'PT Serif', serif;
+}
+
+.position,
+.address {
+	padding: 0;
+	margin: 0.5rem 0 0;
+}
+
+.address {
+	font-style: normal;
+	color: #999;
+}
+
+.contacts {
+	list-style: none;
+	margin: 1.5rem 0 0 1.5rem;
+	padding: 0;
+	font-size: 0.9rem;
+	line-height: 1.25rem;
+}
+
+a {
+	color: #2f8bcc;
+}
+
+a:hover {
+	color: #cc0000;
+}
+
+@media (min-width: 800px) {
+	.card {
+		transform: scale(1.5);
+	}
 }
